--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,10 @@ spring:
       chat:
         options:
           model: qwen-max-2025-01-25
+      client:
+        connect-timeout: 30s
+        read-timeout: 60s
+        write-timeout: 30s
   datasource:
     url: jdbc:mysql://1.13.183.61:13306/agent_app?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
     driver-class-name: com.mysql.cj.jdbc.Driver
