--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,11 @@
             <version>0.12.5</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-boot-starter</artifactId>
+            <version>3.25.1</version>
+        </dependency>
     </dependencies>
 
     <build>
