--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,12 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: 123456
+  data:
+    redis:
+      database: 0
+      host: 1.13.183.61
+      port: 16379
+
 server:
   port: 8123
   servlet:
