使用LogBack日志框架配置日志，同时使用aop功能方便添加日志

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -46,3 +46,10 @@ knife4j:
   enable: true
   setting:
     language: zh_cn
+
+logging:
+  file:
+    path: ./logs
+  level:
+    root: INFO
+    com.zqw.agent_app: INFO
