--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,10 @@
             <artifactId>redisson-spring-boot-starter</artifactId>
             <version>3.25.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
